@startuml

title __TEXTDETECTOR's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace textdetector {
      class jp.oist.abcvlib.camera.textdetector.TextGraphic {
          {static} - MARKER_COLOR : int
          {static} - STROKE_WIDTH : float
          {static} - TAG : String
          {static} - TEXT_COLOR : int
          {static} - TEXT_SIZE : float
          - labelPaint : Paint
          - rectPaint : Paint
          - text : Text
          - textPaint : Paint
          + draw()
          ~ TextGraphic()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace textdetector {
      class jp.oist.abcvlib.camera.textdetector.TextRecognitionProcessor {
          {static} - TAG : String
          - textRecognizer : TextRecognizer
          + TextRecognitionProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
          {static} - logExtrasForTesting()
      }
    }
  }
  

  jp.oist.abcvlib.camera.textdetector.TextGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic
  jp.oist.abcvlib.camera.textdetector.TextRecognitionProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
